intTests/test_repl/file002.log.good
Loading file "file002.saw"
file002.saw:3:1-3:4: Error: Syntax error: missing ';'
FAILED
