intTests/test_repl/file002.saw
// missing semicolons should be rejected in files
let x = 3
let y = 4
